--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,5 +12,5 @@ phases:
   build:
     commands:
       - terraform init 
-      - terraform apply -auto-approve
-      # terraform destroy -auto-approve
+      - terraform apply -var-file dev.tfvars -auto-approve
+      # terraform destroy -var-file dev.tfvars -auto-approve
