--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
 
   pre_build:
     commands:
-      - sudo yum install -y yum-utils
+      # - sudo yum install -y yum-utils
       - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
       - sudo yum -y install terraform
       - terraform --version
@@ -12,5 +12,5 @@ phases:
   build:
     commands:
       - terraform init 
-      - terraform apply -var-file dev.tfvars -auto-approve
-      #- terraform destroy -var-file dev.tfvars -auto-approve
+      # - terraform apply -var-file dev.tfvars -auto-approve
+      - terraform destroy -var-file dev.tfvars -auto-approve
