--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,13 +4,19 @@ phases:
 
   pre_build:
     commands:
-      - sudo yum install -y yum-utils
-      - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
-      - sudo yum -y install terraform
+      # - sudo yum install -y yum-utils
+      # - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
+      # - sudo yum -y install terraform
+      # - terraform --version
+      - sudo apt-get update
+      - sudo apt-get install -y unzip
+      - wget https://releases.hashicorp.com/terraform/1.6.0/terraform_1.6.0_linux_amd64.zip
+      - unzip terraform_1.6.0_linux_amd64.zip
+      - sudo mv terraform /usr/local/bin/
       - terraform --version
 
   build:
     commands:
       - terraform init 
-      # - terraform apply -var-file dev.tfvars -auto-approve
-      - terraform destroy -var-file dev.tfvars -auto-approve
+      - terraform apply -var-file dev.tfvars -auto-approve
+      # - terraform destroy -var-file dev.tfvars -auto-approve
